--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
-.container {
+body {
     display: flex;
+    justify-content: center;
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 850px;
+    height: 850px;
 }
 
 .cell {
-    background-color: black;
+    color: black;
+    background-color: white;
+    border-color: gray;
+    width: 6%;
+    height: 6%;
+    border-style: solid;
+    border-width: 1px;
 }
