--- a/style.css
+++ b/style.css
@@ -16,5 +16,10 @@ body {
     background-color: white;
     width: 6.25%;
     height: 6.25%;
+}
 
+/* Not the efffect i wanted */
+
+.cell:hover {
+    background-color: blue;
 }
