--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.restart-button {
+    padding-top: 5px;
+    padding-bottom: 20px;
 }
 
 #container {
